tests/custom-4.4.2/noncompliant/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: noncompliant-secret
type: Opaque
data:
  key: dmFsdWU=
